<resources>
    <string name="app_name">Registration Form</string>
    <string name="welcome">Welcome to Adventure Learning Club!</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="studentid">Student ID:</string>
    <string name="school_name">School:</string>
    <string name="email">E-mail:</string>
    <string name="phone">Phone:</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
</resources>